--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@fortawesome/free-regular-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
-    "@headlessui/react": "2.2.0",
-    "@next/third-parties": "15.2.4",
+    "@headlessui/react": "2.2.1",
+    "@next/third-parties": "15.3.0",
     "@tailwindcss/line-clamp": "0.4.4",
+    "@tailwindcss/postcss": "^4.1.3",
     "@vercel/analytics": "1.5.0",
     "awesome-debounce-promise": "2.1.0",
     "axios": "1.8.4",
@@ -31,7 +32,7 @@
     "ioredis": "5.6.0",
     "jszip": "3.10.1",
     "mpegts.js": "1.8.0",
-    "next": "15.2.4",
+    "next": "15.3.0",
     "next-i18next": "15.4.2",
     "nextjs-progressbar": "0.0.16",
     "preview-office-docs": "1.0.2",
@@ -42,7 +43,7 @@
     "react-copy-to-clipboard": "5.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "2.5.2",
-    "react-hotkeys-hook": "4.6.1",
+    "react-hotkeys-hook": "5.0.1",
     "react-i18next": "15.4.1",
     "react-markdown": "10.1.0",
     "react-reader": "2.0.13",
@@ -62,18 +63,17 @@
     "@types/node": "22.14.0",
     "@types/react": "19.1.0",
     "@types/react-copy-to-clipboard": "5.0.7",
-    "@types/react-dom": "19.1.1",
+    "@types/react-dom": "19.1.2",
     "@types/react-syntax-highlighter": "15.5.13",
     "autoprefixer": "10.4.21",
-    "eslint": "9.23.0",
-    "eslint-config-next": "15.2.4",
-    "eslint-config-prettier": "10.1.1",
+    "eslint": "9.24.0",
+    "eslint-config-next": "15.3.0",
+    "eslint-config-prettier": "10.1.2",
     "i18next-parser": "9.3.0",
-    "postcss": "8.5.3",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
-    "tailwindcss": "3.2.7",
-    "typescript": "5.8.2"
+    "tailwindcss": "4.1.3",
+    "typescript": "5.8.3"
   },
   "prettier": {
     "printWidth": 120,
